# dioxus-supabase

./: Cargo.toml
src/: auth.rs  lib.rs  realtime.rs
