[package]
name = "dioxus-supabase"
version = "0.1.0"
authors = ["Carlos Diaz-Padron <carlosdiazpadron@gmail.com>"]
edition = "2021"

[features]
auth = [
  "axum",
  "tower",
  "jsonwebtoken",
]

[dependencies]
dioxus = "0.6"
dioxus-query = "0.6"
crossbeam = "0.8"
reqwest = { version = "0.12", features = ["json"] }
reqwest-websocket = "0.5"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-timers = { version = "0.3.0", features = ["futures"] }
tracing = "0.1"
uuid = { version = "1.16", features = ["fast-rng"] }

axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
jsonwebtoken = { version = "9", optional = true }
